# learn-cabal

./: .gitignore  Hello.hs  LICENSE  Main.hs  README.md  learn-cabal.cabal
test/: doctest.hs
