name:                learn-cabal
version:             0.1.0.0
synopsis:            learn how to use cabal
description:         learn how to use cabal for my haskell life
license:             MIT
license-file:        LICENSE
author:              TSUKIKAGE Osana
maintainer:          kagamilove0707@gmail.com

category:            Other

build-type:          Simple

cabal-version:       >=1.10

executable learn-cabal
  main-is:             Main.hs
  
  build-depends:       base >=4.6 && <4.7
  
  default-language:    Haskell2010
