name:                learn-cabal
version:             0.1.0.0
synopsis:            learn how to use cabal
description:         learn how to use cabal for my haskell life
license:             MIT
license-file:        LICENSE
author:              TSUKIKAGE Osana
maintainer:          kagamilove0707@gmail.com
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
  exposed-modules:     Hello
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  ghc-options:         -threaded -Wall
  main-is:             doctest.hs
  build-depends:       base
                     , doctest >=0.9.3
  

executable learn-cabal
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
